# autha

./: .drone.yml  .gitignore  Cargo.toml
client/: Cargo.toml
client/examples/: basic.rs
client/src/: email.rs  error.rs  flow.rs  jwt.rs  lib.rs  request.rs
deploy/: Dockerfile
server/: .env  Cargo.toml
server/dev/: .env  docker-compose.yml
server/migrations/2022-01-06-181614_initial/: down.sql  up.sql
server/src/: cli.rs  config.rs  db.rs  email.rs  error.rs  jwt.rs  main.rs  provider.rs  redis.rs  telemetry.rs  util.rs
server/src/db/: actions.rs  context.rs  model.rs  schema.rs
server/src/email/: routes.rs  verify.rs
server/src/error/: database.rs  email.rs  user.rs  username.rs
server/src/jwt/: error.rs  extractor.rs  route.rs
server/src/provider/: context.rs  dynamic.rs  flow.rs  manager.rs  plugins.rs
server/src/provider/plugins/: openid_connect.rs  password.rs
server/src/provider/plugins/password/: error.rs  limits.rs  request.rs  response.rs  route.rs  util.rs
server/src/redis/: action.rs  limiter.rs
server/src/redis/action/: email_verification.rs  reset_password.rs
server/src/redis/limiter/: error.rs
