[package]
name = "autha_client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "rt", "macros"] }
